# crewai-sandboxai-example

./: README.md  pyproject.toml
src/crewai_example/: crew.py  main.py
src/crewai_example/config/: agents.yaml  tasks.yaml
src/crewai_example/tools/: custom_tool.py
